--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			Vice-president of HESTREET. 
 			Head wrestling coach at:
 			</p>
-		<a href="https://rsnipv.github.io/hec-bjj/" target="_blank" align="right"><div class="button">
+		<a href="https://rsnipv.github.io/hec-bjj/" target="blank" align="right"><div class="button">
 		<h2>🤼‍♂️ HEC BJJ 🤼‍♂️</h2>
 		</div></a>
 	</div>
